--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,9 @@
         "linebreak-style": 0,
         "consistent-return": 0,
         "no-prototype-builtins": 0,
-        "import/prefer-default-export": 0
+        "import/prefer-default-export": 0,
+        "indent": "off",
+        "comma-dangle":"off"
     },
     "plugins": ["jasmine", "codeceptjs"]
 }
